# drone_delivery

./: .gitignore  CMakeList.txt  README.md  manholes.csv  package.xml  setup.cfg  setup.py
drone_delivery/: actions.py  drone_control.py  job_scheduling.py  location_publisher.py  locations.csv  package.xml  setup.py
drone_delivery/drone_delivery/: actions.py  dd_actions.py  drone_control.py  goal_handler.py  gripper_control.py  gripper_control_one.py  gripper_control_two.py  job_scheduling.py  location_publisher.py  location_publisher_one.py  location_publisher_two.py  locations.csv  objects.py  wheeled_control.py
drone_delivery/launch/: robot_launch.py
drone_delivery/resource/: robots.urdf  wheeledRobot.urdf
drone_delivery/worlds/: .droneSimulationWorld.wbproj  .droneSimulationWorldOne.wbproj  .droneSimulationWorldTwo.wbproj  droneSimulationWorld.wbt  droneSimulationWorldOne.wbt  droneSimulationWorldTwo.wbt
drone_delivery_services/: CMakeLists.txt  package.xml
drone_delivery_services/action/: Drone.action
drone_delivery_services/msg/: Droneloc.msg  Emergency.msg  Goal.msg
drone_delivery_services/srv/: Destination.srv  Wheeled.srv
install/: local_setup.sh  setup.sh
install/drone_delivery/lib/drone_delivery/: drone_control  my_robot_driver  (+3 more)
launch/: robot_launch.py
log/: latest_build
resource/: robots.urdf
worlds/: .builtWorld.wbproj  .droneSimulationWorld.wbproj  .exampleWorld.wbproj  .exampleWorldorus.wbproj  builtWorld.wbt  droneSimulationWorld.wbt  droneSimulationWorld2.wbt  droneSimulationWorld_old.wbt  exampleWorld.wbproj  exampleWorld.wbt
(+10 files in other folders)
